--- a/docs/estilos.css
+++ b/docs/estilos.css
@@ -2,8 +2,8 @@
             position: fixed;
             top: 20%;
             right: 10px;
-            background-color: #04AA6D;
-            color: white;
+            background-color: #04556D;
+            color: yellow;
             padding: 10px 15px;
             text-decoration: none;
             border-radius: 5px;
