--- a/docs/estilos.css
+++ b/docs/estilos.css
@@ -1,28 +1,6 @@
-.home-link {
-            position: fixed;
-            top: 20%;
-            right: 10px;
-            background-color: #04556D;
-            color: yellow;
-            padding: 10px 15px;
-            text-decoration: none;
-            border-radius: 5px;
-            z-index: 1100; /* Ensures it stays on top */
-        }
-        .home-link:hover {
-            background-color: #CCFAFA;
-            color: #A0A0D0;
-        }
-
-h2 {
-
-}
-
 table {
   border-collapse: collapse;
-  width: 94%;
-  font-family:Lato;
-  font-size:10px;
+  width: 100%;
 
 }
 
@@ -37,33 +15,11 @@ th:nth-child(even),td:nth-child(even) {
 }
 
 th {
-  text-align: center;
-}
-td {
-  text-align: center;
-}
-
-div{
-    font-family:Lato;
-}
-
-section {
-    font-family:Lato;
-}
-
-p{
-    font-family:Lato;
-}
-
-a{
-    font-family:Lato;
-    font-size:16px;
-    font-weight:bold;
+  text-align: left;
 }
 
 body {
-  font-family: Lato, century gothic , sans-serif; Tahoma, sans-serif;script;
-  background-color:#555555;
+  font-family: montserrat, Tahoma, sans-serif;
 }
 
 /* Style the header */
@@ -107,46 +63,19 @@ th{
 }
 
 p {
-  opacity: 1;
-  background-color:#d9fc99;
-  color:#333333;
+  opacity: 0.8;
 }
 /* Create two columns/boxes that floats next to each other */
 
 
 img {
 
-  max-width: 94%;
-  min-width: 180px;
-  max-height:320px;
+  max-width: 30%;
+  min-width: 20%;
+  height:auto;
   background: #ccc;
   padding-left: 0px;
   padding-bottom: 0px;
-  }
-
-.bi {
-  width:auto;
-  max-height:1600px;
-  background: #ccc;
-  padding-left: 0px;
-  padding-bottom: 0px;
-  }
-
-.bbi {
-  width:auto;
-  max-height:1600px;
-  background: #ccc;
-  padding-left: 0px;
-  padding-bottom: 0px;
-  }
-
-.bbii {
-  width:auto;
-  max-height:1600px;
-  background: #ccc;
-  padding-left: 0px;
-  padding-bottom: 0px;
-  }
 
 /* Style the list inside the menu */
 nav ul {
@@ -164,7 +93,12 @@ article {
   height: 300px; /* only for demonstration, should be removed */
 }
 
-
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 /* Style the footer */
 footer {
@@ -178,90 +112,7 @@ footer {
 each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
   nav, article, p, caption {
-    width: 96%;
+    width: 100%;
     height: auto;
   }
 }
-
-
-.navbar {
-  position: sticky;
-  top: 0;
-  overflow: hidden;
-  background-color: #00333;
-}
-
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 12px 14px;
-  text-decoration: none;
-  font-size: 15px;
-}
-
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.navbar a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-.navbar a.active:hover {
-  background-color: #0000ee;
-  color: black;
-}
-
-.content {
-            padding: 60px 20px;
-        }
-
-
-
-
-.lato-regular {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.lato-bold {
-  font-family: "Lato", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.lato-regular-italic {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.lato-bold-italic {
-  font-family: "Lato", sans-serif;
-  font-weight: 700;
-  font-style: italic;
-}
-
-a.button {
-
-        padding: 1px 6px;
-        display: block;
-        display: inline-block;
-    border: 2px outset buttonborder;
-    border-radius: 3px;
-    color: green;
-    background-color: buttonface;
-    text-decoration: none;
-}
-
-h1{
-    font-family:Lato;
-}
-
-
-
